// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleSearchToolbar /> should render when [canCreate=false] 1`] = `
<div>
  <Toolbar>
    <SearchInput
      onChange={[Function]}
      placeholder="Sample name"
      value=""
    />
  </Toolbar>
  <Box>
    <Connect(AlgorithmFilter) />
  </Box>
</div>
`;

exports[`<SampleSearchToolbar /> should render when [canCreate=true] 1`] = `
<div>
  <Toolbar>
    <SearchInput
      onChange={[Function]}
      placeholder="Sample name"
      value=""
    />
    <LinkButton
      color="blue"
      tip="Create"
      tipPlacement="top"
      to={
        Object {
          "state": Object {
            "createSample": true,
          },
        }
      }
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="plus-square fa-fw"
      />
    </LinkButton>
  </Toolbar>
  <Box>
    <Connect(AlgorithmFilter) />
  </Box>
</div>
`;
